# galtland

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
appcommon/: Cargo.toml  sqlx-data.json
appcommon/migrations/: 0_create_keypairs.sql
appcommon/src/: db.rs  lib.rs
galtbrowser/: Cargo.toml
galtbrowser/src/: main.rs  transport.rs  utils.rs
galtbrowser/src/components/: text_input.rs
galtbrowser/src/net/: mod.rs
galtbrowser/src/net/webrtc/: mod.rs  setup.rs  state.rs
galtcli/: Cargo.toml  build.rs
galtcli/proto/: service.proto
galtcli/src/: main.rs  service.rs
galtcore/: Cargo.toml  README.md
galtcore/benches/: serialization.rs
galtcore/src/: configuration.rs  lib.rs  networkbackendclient.rs  peer_seeds.rs  swarm.rs  utils.rs
galtcore/src/cm/: mod.rs
galtcore/src/cm/modules/: galt_identify.rs  mod.rs  payment_info.rs  peer_control.rs  simple_file.rs
galtcore/src/cm/modules/streaming/: handlers.rs  mod.rs  peer_seeker.rs  stream_publisher.rs  stream_seeker.rs
galtcore/src/daemons/: gossip_listener.rs  internal_network_events.rs  mod.rs  rtmp_server.rs
galtcore/src/daemons/cm/: mod.rs  payment_info.rs  peer_control.rs  simple_file.rs
galtcore/src/daemons/cm/rtmp/: handlers.rs  mod.rs  peer_seeker.rs  rtmp_publisher.rs  stream_seeker.rs
galtcore/src/daemons/cm/streaming/: handlers.rs  peer_seeker.rs  stream_publisher.rs  stream_seeker.rs
galtcore/src/protocols/: dcutr_behaviour.rs  delegated_streaming.rs  galt_identify.rs  gossip.rs  kademlia_record.rs  media_streaming.rs  mod.rs  relay_client.rs  relay_server.rs  rtmp_streaming.rs  simple_file_exchange.rs  webrtc_signaling.rs
galtcore/src/protocols/payment_info/: handlers.rs  mod.rs  models.rs
galtdesktop/: Cargo.toml  README.md  build.rs
galtdesktop/src/: backend.rs  gui.rs  main.rs  scene.slint  video.rs
nativecommon/: Cargo.toml
nativecommon/src/: lib.rs  media.rs  rtmp_server.rs  rtmp_server2.rs  transport.rs  webrtc.rs
nativecommon/src/webrtc/: mod.rs  play_stream.rs  publish_local_file.rs  publish_stream.rs  setup.rs
