# SPDX-License-Identifier: AGPL-3.0-only

[workspace]
members = [
    "galtcli",
    "galtdesktop",
    "galtbrowser",
    "galtcore",
    "appcommon",
    "nativecommon"
]

[patch.crates-io]
dtls = { package = "webrtc-dtls", git = "https://github.com/webrtc-rs/dtls" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

