[package]
name = "galtland"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galtcore = { path="../galtcore" }

sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" , "macros", "chrono", "offline", "any"] }

log = "0.4.14"
pretty_env_logger = "0.4.0"
byte-unit = "4.0.13"
anyhow = {version="1.0.52", features=["backtrace"]}
human-panic = "1.0.3"
indicatif = "0.16.2"
clap = { version = "3.0.14", features = ["derive"] }
tonic = "0.6.2"
prost = "0.9.0"
hex = "0.4.3"
serde_json = "1.0.78"


[build-dependencies]
tonic-build = "0.6.2"


[dev-dependencies]
console-subscriber = {version = "0.1"}


# [[bin]]
# name = "other"
# path = "src/other.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"