[package]
name = "galtcore"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
homepage = "https://galtland.io"
repository = "https://git.galtland.io/galtland/galtland"
readme = "README.md"
description = "The core functionalities of galtland"

[dependencies]
libp2p = { version = "0.42.2", features = [
    "tcp-tokio",
    "dns-tokio",
    "floodsub",
    "identify",
    "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "relay",
    "request-response",
    "rendezvous",
    "secp256k1",
    "websocket"] }
tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-stream = {version = "0.1.8"}

async-trait = "0.1"

rml_rtmp = "0.6"

structopt = "0.3.21"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
hex = {version = "0.4.3"}
itertools = {version = "0.10.3"}
anyhow = {version="1.0.52", features=["backtrace"]}
chrono = {version = "0.4.19"}
bytes = {version="1.1"}
bincode = {version="1.3.3"}
blake3 = {version="1.3.0"}
rand = "0.8.4"
unsigned-varint = "0.7.1"
byte-unit = "4.0.13"
rayon = "1.5.1"
pin-project-lite = "0.2.8"
futures-util = "0.3.19"
futures = "0.3.19"