[package]
name = "galtdesktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-only"
homepage = "https://galtland.io"
repository = "https://git.galtland.io/galtland/galtland"
readme = "README.md"
description = "A desktop app for galtland"

[dependencies]
galtcore = { path="../galtcore" }
appcommon = { path="../appcommon" }

slint = "0.2.0"
glow = { version = "0.11" }
instant = { version = "0.1", features = ["now"] }
libmpv = { git = "https://github.com/anlumo/libmpv-rs" }

log = "0.4.14"
pretty_env_logger = "0.4.0"
byte-unit = "4.0.13"
anyhow = {version="1.0.52", features=["backtrace"]}
human-panic = "1.0.3"
clap = { version = "3.0.14", features = ["derive"] }


[build-dependencies]
slint-build = "0.2.0"

# [patch.crates-io.slint]
# git = "https://github.com/vgarleanu/slint"
